<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <Button
        android:id="@+id/backk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Back"/>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="1"
       android:orientation="horizontal">

       <TextView
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           style="@style/songs"
           android:text="@string/artistname"
           android:background="@color/artist_name"/>

   </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/songs"
            android:text="@string/songname"
            android:background="@color/song_name"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:orientation="horizontal">


        <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/songs"
        android:text="@string/songdate"
        android:background="@color/song_date"/>

    </LinearLayout>

</LinearLayout>
